# noisegate

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/app/: Cargo.toml
crates/app/src/: banner.rs  config.rs  log_format.rs  main.rs  pipeline.rs  tray.rs
crates/audio-io/: Cargo.toml
crates/audio-io/src/: devices.rs  error.rs  format.rs  lib.rs  mmcss.rs  wasapi_capture.rs  wasapi_render.rs
crates/dsp/: Cargo.toml
crates/dsp/src/: dfnet.rs  lib.rs  onnx.rs  rnnoise.rs
