[package]
name = "noisegate-audio-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Windows WASAPI low-latency capture/render + MMCSS for the NoiseGate noise-cancellation app."
keywords = ["wasapi", "audio", "windows", "mmcss", "low-latency"]
categories = ["multimedia::audio", "os::windows-apis"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",                   # required by CreateEventW signature
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_Properties",
    "Win32_System_ProcessStatus",
    "Win32_System_Performance",
] }
windows-core = "0.58"
