[package]
name = "noisegate-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Trait-based real-time noise-suppression DSP layer. DeepFilterNet3 (default) or any HF-exported ONNX model, single-frame causal."
keywords = ["noise-suppression", "deepfilternet", "speech-enhancement", "real-time", "dsp"]
categories = ["multimedia::audio", "science"]

[features]
default = ["dfnet3"]
# DeepFilterNet3 (research weights, MIT code, non-commercial weights — fine for personal/hobby).
dfnet3 = []
# Reserved for a future onnxruntime/DirectML backend that can load
# arbitrary HF-exported denoise models.
onnx = ["dep:ort"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# DeepFilterNet — pure-Rust inference via tract. v3 model bundled.
df = { version = "0.5", default-features = false, features = ["tract", "default-model"] }
ndarray = "0.15"

# Optional: ONNX Runtime path for alternative models (HF exports etc.).
ort = { version = "2.0.0-rc.4", optional = true, default-features = false, features = ["load-dynamic", "ndarray"] }
