[package]
name = "noisegate-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Trait-based real-time noise-suppression DSP layer. RNNoise (default) or any ONNX-exported denoise model (e.g. DeepFilterNet3 from Hugging Face)."
keywords = ["noise-suppression", "rnnoise", "speech-enhancement", "real-time", "dsp"]
categories = ["multimedia::audio", "science"]

[features]
default = ["rnnoise"]
# nnnoiseless: pure-Rust port of Xiph's RNNoise. Mature, MIT, ~85 KB model
# embedded. Ships everywhere Rust does. Quality: good but classical-RNN era.
rnnoise = ["dep:nnnoiseless"]
# Optional ONNX Runtime path for high-quality models — point it at any
# raw-audio noise-suppression ONNX file (e.g. DeepFilterNet3 exports from
# Hugging Face). Adds the onnxruntime DLL as a runtime dependency.
onnx = ["dep:ort", "dep:ndarray"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Default backend.
nnnoiseless = { version = "0.5", optional = true }

# Optional ONNX backend.
ort = { version = "2.0.0-rc.4", optional = true, default-features = false, features = ["load-dynamic", "ndarray"] }
ndarray = { version = "0.15", optional = true }
